--- a/text-adventure/page11.html
+++ b/text-adventure/page11.html
@@ -4,13 +4,13 @@
 	<title>Dog shampoo</title>
 </head>
 <body>
-	<h1>Good choice. you should not the shampoo for human.</h1>
+	<h1>Good choice. you should not use the shampoo for human.</h1>
 
-		<p>now you went out for a walk. what's best attitude for a dog walk?</p>
+		<p>Now you went out for a walk. what's best attitude for a dog walk?</p>
 
 
 			<img src="">
-			<a href="page13.html">No attention, no dog collars</a>
+			<a href="page13.html">No attention, no dog collars. Het him free</a>
 
 
 			<img src="">
