--- a/text-adventure/page2.html
+++ b/text-adventure/page2.html
@@ -4,7 +4,7 @@
 	<title>Take a walk</title>
 </head>
 <body>
-	<h1>cat do not needs a walk</h1>
+	<h1>cat do not go out for a walk</h1>
 
 			<img src="angrycat.jpg">
 
