--- a/text-adventure/page7.html
+++ b/text-adventure/page7.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<p>Puppy's happiness:0%</p>
-		<h1>Chocolate is poison to a puppy</h1>
+		<h1>Puppy could die when he eat chocolate</h1>
 		<h2>YOU FAILED</h2>
 
 		<a href="page6.html">Go back</a>
