--- a/text-adventure/page10.html
+++ b/text-adventure/page10.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<h1>Good choice. when you leave home for a long time, make sure there's someone who take care of your pet</h1>
+	<h1>Good choice. when you leave your dog for a long time, make sure there's someone who take care of your pet</h1>
 
 
 		<p1>Now you are trying to bathe your dog. what will you use?</p1>
