--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -1,12 +1,23 @@
 <html>
 	<head>
 		<title>My cool site</title>
+		<link rel="stylesheet" type="text/css" href="homepage.css">
+		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
+
 	</head>
 
 	<body>
-		<h1>Hello!</h1>
+		<h1 id="header">hhheeellooooowww!</h1>
+		<h1>hellohahah</h1>
 
 		<p>Welcome to my Creative Computing Site</p>
+
+		<p class="phone-number">555-5555</p>
+
+		<p class="phone-number international">+1 555 5555</p>
+
+		<p>Text Adventure: Use HTML tags to build a multi-page, hyperlinked text adventure. Each step of the adventure should have at least two choices, and your adventure should go at least four levels deep (for a minimum of 15 pages).</p>
+				
 
 		<ol>
 			<li>Wake up</li>
@@ -16,5 +27,6 @@
 		</ol>
 
 		<a href="page1.html">Click Me</a>
+		<a href="textadventure/index.html">project1: Text adventure</a>
 	</body>
 </html>
