--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -7,26 +7,16 @@
 	</head>
 
 	<body>
-		<h1 id="header">hhheeellooooowww!</h1>
-		<h1>hellohahah</h1>
+		<h1 id="header">Suji Kang</h1>
+		<h1>Creative computing 2017 fall</h1>
 
 		<p>Welcome to my Creative Computing Site</p>
 
-		<p class="phone-number">555-5555</p>
+		<p class="phone-number">646-866-4099</p>
 
-		<p class="phone-number international">+1 555 5555</p>
 
-		<p>Text Adventure: Use HTML tags to build a multi-page, hyperlinked text adventure. Each step of the adventure should have at least two choices, and your adventure should go at least four levels deep (for a minimum of 15 pages).</p>
-				
 
-		<ol>
-			<li>Wake up</li>
-			<li>Take a shower</li>
-			<li>Get dressed</li>
-			<li>Go outside</li>
-		</ol>
-
-		<a href="page1.html">Click Me</a>
+		<li>ASSIGNMENT-1st week</li>
 		<a href="textadventure/index.html">project1: Text adventure</a>
 	</body>
 </html>
