--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -13,6 +13,7 @@
 		<p>Welcome to my Creative Computing Site</p>
 
 		<p class="phone-number">646-866-4099</p>
+		<p> Kangs041@newschool.edu</p>
 
 
 
