--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -7,17 +7,27 @@
 	</head>
 
 	<body>
-		<h1 id="header">Suji Kang</h1>
+		<h1 id="header"> Suji Kang</h1>
 		<h1>Creative computing 2017 fall</h1>
 
+
+	<div>
 		<p>Welcome to my Creative Computing Site</p>
 
+
 		<p class="phone-number">646-866-4099</p>
+		</div>
+
+	<div>
 		<p> Kangs041@newschool.edu</p>
+	
+	</div>
 
-
-
+	<ol>
 		<li>ASSIGNMENT-1st week</li>
 		<a href="textadventure/index.html">project1: Text adventure</a>
+		<
+
+		</ol>
 	</body>
 </html>
