--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -25,8 +25,8 @@
 
 	<ol>
 		<li>ASSIGNMENT-1st week</li>
-		<a href="textadventure/index.html">project1: Text adventure</a>
-		<
+		<a href="textadventure/index.html">Text adventure</a>
+		<a href="week3.html">CSS layout and web inspector</a>
 
 		</ol>
 	</body>
