--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -26,7 +26,7 @@
 	<ol>
 		<li>ASSIGNMENT-1st week</li>
 		<a href="textadventure/index.html">Text adventure</a>
-		<a href="week3.html">CSS layout and web inspector</a>
+		<a href="textadventure/week3.html">CSS layout and web inspector</a>
 
 		</ol>
 	</body>
