--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -25,10 +25,10 @@
 
 	<ol>
 		<li>
-		<a href="textadventure/index.html">Text adventure</a>
+		<a1 href="textadventure/index.html">Text adventure</a1>
 
-		
-		<a href="textadventure/week3.html">CSS layout and web inspector</a>
+
+		<a2 href="textadventure/week3.html">CSS layout and web inspector</a2>
 		</li>
 
 		</ol>
