--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -24,11 +24,10 @@
 	</div>
 
 	<ol>
-		<li>
-		<a1 href="textadventure/index.html">Text adventure</a1>
+		<li> href="textadventure/index.html">Text adventure</li>
 
 
-		<a2 href="textadventure/week3.html">CSS layout and web inspector</a2>
+		<li> <a href="textadventure/week3.html">CSS layout and web inspector</a>
 		</li>
 
 		</ol>
