--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<ol>
-		<li> href="textadventure/index.html">Text adventure</li>
+		<a href="textadventure/index.html">Text adventure</a>
 
 
 		<li> <a href="textadventure/week3.html">CSS layout and web inspector</a>
