--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -24,11 +24,11 @@
 	</div>
 
 	<ol>
-		<li><a href="textadventure/index.html">Text adventure</a><li>
+		
 
 
 		<li> <a href="textadventure/week3.html">CSS layout and web inspector</a>
-		</li>
+		<a href="textadventure/index.html">Text adventure</a></li>
 
 		</ol>
 	</body>
