--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -27,8 +27,8 @@
 		
 
 
-		<li> <a href="textadventure/week3.html">CSS layout and web inspector</a>
-		<a href="textadventure/index.html">Text adventure</a></li>
+		<li> <a href="textadventure/week3.html">CSS layout and web inspector</a><li>
+		<li><a href="textadventure/index.html">Text adventure</a></li>
 
 		</ol>
 	</body>
