--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -25,8 +25,8 @@
 
 	<ol>
 		
-		<li> <a href="textadventure/week3.html">CSS layout and web inspector</a><li>
-		<li> <a href="textadventure/index.html">Text adventure</a></li>
+		 <a href="textadventure/week3.html">CSS Layout and the Web Inspector</a>
+		 <a href="textadventure/index.html">Text adventure</a>
 
 		</ol>
 	</body>
