--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -25,7 +25,7 @@
 
 	<ol>
 		
-		 <a href="textadventure/week3.html">CSS Layout and the Web Inspector</a>
+		 <a href="week3.html">CSS Layout and the Web Inspector</a>
 		 <a href="textadventure/index.html">Text adventure</a>
 
 		</ol>
