--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -27,6 +27,7 @@
 		
 		 <a href="week3.html">CSS Layout and the Web Inspector</a>
 		 <a href="textadventure/index.html">Text adventure</a>
+		 <a href="hover.html">three series</a>
 
 		</ol>
 	</body>
