--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -29,6 +29,7 @@
 		 <a href="textadventure/index.html">Text adventure</a>
 		 <a href="hover.html">three series</a>
 		 <a href="6.html">grid exercise</a>
+		 <a href="clock.html">clock</a>
 
 		</ol>
 	</body>
