--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -30,7 +30,7 @@
 		 <a href="hover.html">three series</a>
 		 <a href="6.html">grid exercise</a>
 		 <a href="clock.html">clock</a>
-		 <a hreg="threethings2.thml">three things in a series</a>
+		 <a href="threethings2.hhml">three things in a series</a>
 
 		</ol>
 	</body>
