--- a/creative computing/index.html
+++ b/creative computing/index.html
@@ -31,6 +31,7 @@
 		 <a href="6.html">grid exercise</a>
 		 <a href="clock.html">clock</a>
 		 <a href="threethings2.html">three things in a series</a>
+		 <a href="toy.html">final </a>
 
 		</ol>
 	</body>
