--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -19,25 +19,7 @@
       <p>Suji Kang
         <strong>Class is fun</strong>
       </p>
-
-      <ol>
-        <li class="na">Canada</li>
-        <li class="na">USA</li>
-        <li class="na">Mexico</li>
-        <li class="sa">Brazil</li>
-        <li>Germany</li>
-      </ol>
-
-      <ul>
-        <li>First</li>
-        <li>Second</li>
-        <li>Third</li>
-      </ul>
-    </div>
-
-    <div id="evil">
-      <h1>Leave my site now!</h1>
-      <h2>Class sucks</h2>
-    </div>
+      <a href="deep/hyper attention1.html">deep attention</a>
+      <a href="hyper.html">hyper attention</a>
   </body>
 </html>
