--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -19,7 +19,7 @@
       <p>Suji Kang
         <strong>Class is fun</strong>
       </p>
-      <a href="attentioin1/deepattention1.html">deep attention</a>
-      <a href="hyper.html">hyper attention</a>
+      <a href="deep:hyper attention1/deepattention1.html">deep attention</a>
+      <a href="deep:hyper attention2/hyper.html">hyper attention</a>
   </body>
 </html>
