--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -7,10 +7,6 @@
   </head>
 
   <body>
-    <div id="good">
-      <h1>Hello World</h1>
-      <h2>Welcome to my site!</h2>
-
 
         <a
         href="http://www.google.com">Go to google</a>
@@ -19,7 +15,9 @@
       <p>Suji Kang
         <strong>Class is fun</strong>
       </p>
-      <a href="deep:hyper attention1/deepattention1.html">deep attention</a>
-      <a href="deep:hyper attention2/hyper.html">hyper attention</a>
+      <a href="deepattention1.html">deep attention</a>
+      <a href="hyper.html">hyper attention</a>
+
+
   </body>
 </html>
