--- a/core-interaction/collection/cursive.html
+++ b/core-interaction/collection/cursive.html
@@ -26,22 +26,22 @@
 
 
 
-<p class="shrikhand">Suji Kang </p>
-<p class="cinzel_decorative">Suji Kang </p>
-<p class="stardos_stencil">Suji Kang </p>
-<p class="annie_use_your_telescope">Suji Kang </p>
-<p class="nixie_one">Suji Kang </p>
-<p class="expletus_sans">Suji Kang </p>
-<p class="raleway_dots">Suji Kang </p>
-<p class="comfortaa">Suji Kang </p>
-<p class="abril_fatface">Suji Kang </p>
-<p class="gloria_hallelujah">Suji Kang </p>
-<p class="great_vibes">Suji Kang </p>
-<p class="righteous">Suji Kang </p>
-<p class="monoton">Suji Kang </p>
-<p class="rock_salt">Suji Kang </p>
-<p class="homemade_apple">Suji Kang </p>
-<p class="bowlby_one_sc">Suji Kang </p>
+<p class="shrikhand">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="cinzel_decorative">Suji Kang <input type="text" id="input2" placeholder="type your name"></p>
+<p class="stardos_stencil">Suji Kang <input type="text" id="input3" placeholder="type your name"></p>
+<p class="annie_use_your_telescope">Suji Kang <input type="text" id="input4" placeholder="type your name"></p>
+<p class="nixie_one">Suji Kang<input type="text" id="input5" placeholder="type your name"> </p>
+<p class="expletus_sans">Suji Kang <input type="text" id="input6" placeholder="type your name"></p>
+<p class="raleway_dots">Suji Kang <input type="text" id="input7" placeholder="type your name"></p>
+<p class="comfortaa">Suji Kang <input type="text" id="input8" placeholder="type your name"></p>
+<p class="abril_fatface">Suji Kang <input type="text" id="input9" placeholder="type your name"></p>
+<p class="gloria_hallelujah">Suji Kang <input type="text" id="input10" placeholder="type your name"></p>
+<p class="great_vibes">Suji Kang <input type="text" id="input11" placeholder="type your name"></p>
+<p class="righteous">Suji Kang<input type="text" id="input12" placeholder="type your name"> </p>
+<p class="monoton">Suji Kang <input type="text" id="input13" placeholder="type your name"></p>
+<p class="rock_salt">Suji Kang <input type="text" id="input14" placeholder="type your name"></p>
+<p class="homemade_apple">Suji Kang<input type="text" id="input15" placeholder="type your name"> </p>
+<p class="bowlby_one_sc">Suji Kang <input type="text" id="input16" placeholder="type your name"></p>
 
 
 
