--- a/core-interaction/collection/monospace.html
+++ b/core-interaction/collection/monospace.html
@@ -26,11 +26,11 @@
 
 
 
-<p class="roboto_mono">Suji Kang </p>
-<p class="inconsolata">Suji Kang </p>
-<p class="source_code_pro">Suji Kang </p>
-<p class="cutive_mono">Suji Kang </p>
-<p class="nova_mono">Suji Kang </p>
+<p class="roboto_mono">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="inconsolata">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="source_code_pro">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="cutive_mono">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="nova_mono">Suji Kang <input type="text" id="input1" placeholder="type your name"></p>
 
 
 
