--- a/core-interaction/collection/sansserif.html
+++ b/core-interaction/collection/sansserif.html
@@ -26,14 +26,14 @@
 
 
 
-<p class="alegreya_sans">Suji Kang </p>
-<p class="catamaran">Suji Kang </p>
-<p class="tenor_sans">Suji Kang </p>
-<p class="cuprum">Suji Kang </p>
-<p class="economica">Suji Kang </p>
-<p class="marvel">Suji Kang </p>
-<p class="orbitron">Suji Kang </p>
-<p class="syncopate">Suji Kang </p>
+<p class="alegreya_sans">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="catamaran">Suji Kang <input type="text" id="input1" placeholder="type your name"></p>
+<p class="tenor_sans">Suji Kang <input type="text" id="input1" placeholder="type your name"></p>
+<p class="cuprum">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
+<p class="economica">Suji Kang <input type="text" id="input1" placeholder="type your name"></p>
+<p class="marvel">Suji Kang <input type="text" id="input1" placeholder="type your name"></p>
+<p class="orbitron">Suji Kang <input type="text" id="input1" placeholder="type your name"></p>
+<p class="syncopate">Suji Kang<input type="text" id="input1" placeholder="type your name"> </p>
 
 
 
