--- a/core-interaction/expanded type/expanded type.html
+++ b/core-interaction/expanded type/expanded type.html
@@ -5,15 +5,16 @@
 <title>Mood background</title>
 <link rel="stylesheet" href="expanded type.css">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Sacramento|Satisfy|Tangerine" rel="stylesheet">
 </head>
-
 <body id="back">
 <video id="video" autoplay>
-  <source src="Hole.mp4" type="video/mp4" id="video1">
+  <source src="City.mp4" type="video/mp4" id="video1">
   <source src="vege.mov" type="video/mp4" id="video2">
 </video>
  <div id="love">LOVE</div>
-
+ <div id="night">Night</div>
+ <div id="am"></div>
 
  <div id="box">
    <div class="smallbox">choose the word</div>
@@ -25,7 +26,7 @@
    <div id="word6">fantasy</div>
    <div id="word7">hide</div>
    <div id="word8">5am</div>
-   <div id="word9">everyday</div>
+   <div id="word9"<a href="https://www.accuweather.com/en/us/new-york-ny/10007/weather-forecast/349727" class="aw-widget-legal">>everyday</div>
    <div id="word10"></div>
    <div id="word11">light</div>
    <div id="word12">moon</div>
@@ -33,6 +34,5 @@
 
 
 <script src="expanded type.js"></script>
-
 </body>
 </html>
