--- a/core-interaction/index.html
+++ b/core-interaction/index.html
@@ -17,6 +17,7 @@
       </p>
       <a href="deepattention1.html">deep attention</a>
       <a href="hyper.html">hyper attention</a>
+      <a href="expanded type/expanded type.html">expanded type</a>
 
 
   </body>
