--- a/core-interaction/expanded type/expanded type.html
+++ b/core-interaction/expanded type/expanded type.html
@@ -8,13 +8,46 @@
 <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Sacramento|Satisfy|Tangerine" rel="stylesheet">
 </head>
 <body id="back">
-<video id="video" autoplay>
-  <source src="City.mp4" type="video/mp4" id="video1">
-  <source src="vege.mov" type="video/mp4" id="video2">
+
+
+<audio controls paused id="bgm">
+    <source src="bgm.mp3" type="audio/mpeg">
+</audio>
+
+
+<video id="video1" autoplay loop>
+  <source src="City.mp4" type="video/mp4">
 </video>
- <div id="love">LOVE</div>
+
+<video id="video2" autoplay loop>
+  <source src="love.mp4" type="video/mp4">
+</video>
+
+<video id="video3" autoplay loop muted>
+  <source src="he.mp4" type="video/mp4">
+</video>
+
+<video id="video4" autoplay loop muted>
+  <source src="going.mp4" type="video/mp4">
+</video>
+
+<video id="video5" autoplay loop muted>
+  <source src="going2.mp4" type="video/mp4">
+</video>
+
+<video id="video6" autoplay loop muted>
+  <source src="going3.mp4" type="video/mp4">
+</video>
+<video id="video7" autoplay loop muted>
+  <source src="world.mp4" type="video/mp4">
+</video>
+
+ <div id="love"></div>
  <div id="night">Night</div>
  <div id="am"></div>
+<iframe id="everyday" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11440.129005756196!2d-73.99066944999998!3d40.731313899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1522902664079" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div id="love">LOVE</div>
+
 
  <div id="box">
    <div class="smallbox">choose the word</div>
@@ -26,12 +59,13 @@
    <div id="word6">fantasy</div>
    <div id="word7">hide</div>
    <div id="word8">5am</div>
-   <div id="word9"<a href="https://www.accuweather.com/en/us/new-york-ny/10007/weather-forecast/349727" class="aw-widget-legal">>everyday</div>
-   <div id="word10"></div>
-   <div id="word11">light</div>
-   <div id="word12">moon</div>
+   <div id="word9">everyday</div>
+   <div id="word10">city</div>
+   <div id="word11">going</div>
+   <div id="word12">world</div>
 </div>
 
+<div id="reset">reset</div>
 
 <script src="expanded type.js"></script>
 </body>
