--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="map.css">
-<iframe src="https://maps.wrld3d.com/embed/?mapscene=d462b68" width="560" height="300" frameborder="0" style="border:0" id="map3d" allowfullscreen></iframe>
+<iframe src="https://maps.wrld3d.com/embed/?mapscene=d462b68" width="375" height="667" frameborder="0" style="border:0" id="map3d" allowfullscreen></iframe>
     <p>Welcome to Washington square park</p>
     <div id="map2">Map</div>
     <div id="Music">Music</div>
@@ -29,8 +29,12 @@
   </head>
   <video id="M1" paused loop>
     <source src="1.mp3" type="video/mp4"></video>
-  <video id="M2" autoplay loop>
+  <video id="M2" paused loop>
     <source src="2.mp3" type="video/mp4"></video>
+
+      <audio controls autoplay id="bgm">
+          <source src="2.mp3" type="audio/mpeg">
+      </audio>
 
 
   <body>
