--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="map.css">
 <iframe src="https://maps.wrld3d.com/embed/?mapscene=d462b68" width="375" height="667" frameborder="0" style="border:0" id="map3d" allowfullscreen></iframe>
     <p>Welcome to Washington square park</p>
+
     <div id="map2">Map</div>
-    <div id="Music">Music</div>
+
+
+    <div id="content">
+  <input type="file" id="thefile" accept="audio/x-pn/realaudio"
+   />
+  <canvas id="canvas"></canvas>
+  <audio id="audio" controls></audio>
+</div>
 
     <style>
       /* Always set the map height explicitly to define the size of the div
@@ -17,24 +25,44 @@
          width: auto;
          height: auto;
        }
+       #canvas {
+         position: fixed;
+         left: 0;
+         top: 50%;
+         width: 100%;
+         height: 50%;
+         opacity: .7;
+       }
+
       #map {
         visibility: hidden;
         height: 10px;
         width: 10px;
       }
+
+  #thefile {
+  position: fixed;
+  top: 50%;
+  left: 10px;
+  z-index: 100;
+}
+
+
+audio {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+  width: calc(100% - 20px);
+}
       /* Optional: Makes the sample page fill the window. */
 
     </style>
 
   </head>
-  <video id="M1" paused loop>
-    <source src="1.mp3" type="video/mp4"></video>
-  <video id="M2" paused loop>
-    <source src="2.mp3" type="video/mp4"></video>
 
-      <audio controls autoplay id="bgm">
-          <source src="2.mp3" type="audio/mpeg">
-      </audio>
+
+  <audio id="s1"> <source src="1.mp3" type="audio/mpeg"></source> E</audio>
+<audio id="s2"> <source src="2.mp3" type="audio/mpeg"></source> </audio>
 
 
   <body>
@@ -44,6 +72,7 @@
       // prompted by your browser. If you see the error "The Geolocation service
       // failed.", it means you probably did not give permission for the browser to
       // locate you.
+
 
       var infoWindow;
       var map;
@@ -115,9 +144,92 @@
         console.error(error)
         handleLocationError(true, infoWindow, map.getCenter());
         document.body.style.backgroundColor ="black";
-
-
       }
+
+
+
+
+      var s1Clicked = false;
+
+      document.getElementById("s1").addEventListener("click", function(){
+        if (word1Clicked ==false){
+          word1Clicked = true;
+          document.getElementById("s1").style.backgroundColor = "red"
+          document.getElementById("s1").play(s1) =""
+        }
+        else
+        {word1Clicked = false;
+          document.getElementById("s1").style.backgroundColor = "white"
+
+        }
+      });
+
+
+      window.onload = function() {
+
+        var file = document.getElementById("thefile");
+        var audio = document.getElementById("audio");
+
+        file.onchange = function() {
+          var files = this.files;
+          audio.src = "1.mp3","2.mp3"(files[2]);
+          audio.load();
+          audio.play();
+          var context = new AudioContext();
+          var src = context.createMediaElementSource(audio);
+          var analyser = context.createAnalyser();
+
+          var canvas = document.getElementById("canvas");
+          canvas.width = window.innerWidth;
+          canvas.height = window.innerHeight;
+          var ctx = canvas.getContext("2d");
+
+          src.connect(analyser);
+          analyser.connect(context.destination);
+
+          analyser.fftSize = 256;
+
+          var bufferLength = analyser.frequencyBinCount;
+          console.log(bufferLength);
+
+          var dataArray = new Uint8Array(bufferLength);
+
+          var WIDTH = canvas.width;
+          var HEIGHT = canvas.height;
+
+          var barWidth = (WIDTH / bufferLength) * 4.5;
+          var barHeight;
+          var x = 0;
+
+          function renderFrame() {
+            requestAnimationFrame(renderFrame);
+
+            x = 0;
+
+            analyser.getByteFrequencyData(dataArray);;
+            ctx.fillRect(0, 0, WIDTH, HEIGHT);
+
+            for (var i = 0; i < bufferLength; i++) {
+              barHeight = dataArray[i];
+
+              var r = barHeight + (25 * (i/bufferLength));
+              var g = 250 * (i/bufferLength);
+              var b = 50;
+
+              ctx.fillStyle = "rgb(" + r + "," + g + "," + b + ")";
+              ctx.fillRect(x, HEIGHT - barHeight, barWidth, barHeight);
+
+              x += barWidth + 1;
+            }
+          }
+
+          audio.play();
+          renderFrame();
+        };
+      };
+
+
+
 
     </script>
     <script async defer
