--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -164,7 +164,6 @@ audio {
         }
       });
 
-
       window.onload = function() {
 
         var file = document.getElementById("thefile");
@@ -172,7 +171,7 @@ audio {
 
         file.onchange = function() {
           var files = this.files;
-          audio.src = "1.mp3","2.mp3"(files[2]);
+          audio.src = URL.createObjectURL(files[0]);
           audio.load();
           audio.play();
           var context = new AudioContext();
@@ -197,7 +196,7 @@ audio {
           var WIDTH = canvas.width;
           var HEIGHT = canvas.height;
 
-          var barWidth = (WIDTH / bufferLength) * 4.5;
+          var barWidth = (WIDTH / bufferLength) * 2.5;
           var barHeight;
           var x = 0;
 
@@ -206,7 +205,9 @@ audio {
 
             x = 0;
 
-            analyser.getByteFrequencyData(dataArray);;
+            analyser.getByteFrequencyData(dataArray);
+
+            ctx.fillStyle = "#000";
             ctx.fillRect(0, 0, WIDTH, HEIGHT);
 
             for (var i = 0; i < bufferLength; i++) {
@@ -227,9 +228,6 @@ audio {
           renderFrame();
         };
       };
-
-
-
 
     </script>
     <script async defer
