--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -208,7 +208,8 @@ audio {
             analyser.getByteFrequencyData(dataArray);
 
             ctx.fillStyle = "#000";
-            ctx.fillRect(0, 0, WIDTH, HEIGHT);
+            ctx.fi
+            llRect(0, 0, WIDTH, HEIGHT);
 
             for (var i = 0; i < bufferLength; i++) {
               barHeight = dataArray[i];
