--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="map.css">
-<iframe src="https://maps.wrld3d.com/embed/?mapscene=d462b68" width="375" height="667" frameborder="0" style="border:0" id="map3d" allowfullscreen></iframe>
+<iframe src="https://maps.wrld3d.com/embed/?mapscene=d462b68" width="375"
+ height="667" frameborder="0" style="border:0" id="map3d" allowfullscreen></iframe>
     <p>Welcome to Washington square park</p>
 
     <div id="map2">Map</div>
@@ -31,7 +32,7 @@
          top: 50%;
          width: 100%;
          height: 50%;
-         opacity: .7;
+         opacity: .5;
        }
 
       #map {
@@ -48,12 +49,6 @@
 }
 
 
-audio {
-  position: fixed;
-  left: 10px;
-  bottom: 10px;
-  width: calc(100% - 20px);
-}
       /* Optional: Makes the sample page fill the window. */
 
     </style>
@@ -61,12 +56,23 @@ audio {
   </head>
 
 
-  <audio id="s1"> <source src="1.mp3" type="audio/mpeg"></source> E</audio>
-<audio id="s2"> <source src="2.mp3" type="audio/mpeg"></source> </audio>
-
-
   <body>
     <div id="map"></div>
+    <ul id="playlist">
+            <li class="active">
+                <a href="s1.mp3">
+                    Ravel Bolero
+                </a>
+            </li>
+            <li>
+                <a href="s2.mp3">
+                    Moonlight Sonata - Beethoven
+                </a>
+            </li>
+        </ul>
+
+
+
     <script>
       // Note: This example requires that you consent to location sharing when
       // prompted by your browser. If you see the error "The Geolocation service
@@ -132,14 +138,14 @@ audio {
         if (position.coords.longitude> -73.993852
           && position.coords.latitude>40.735149){
             console.log("red")
-            document.body.style.backgroundColor ="red"
-        } else {
+            document.body.style.backgroundColor ="white"
+        }
+
+        else {
           console.log("blue")
-            document.body.style.backgroundColor ="blue"
-            document.getElementById("M2").vid.autoplay= "true"
+            document.body.style.backgroundColor ="brown"
         }
       }
-
       function onFailure(error) {
         console.error(error)
         handleLocationError(true, infoWindow, map.getCenter());
@@ -148,7 +154,7 @@ audio {
 
 
 
-
+////쓸모없는거/////s1이노래버튼이라는가정하에////
       var s1Clicked = false;
 
       document.getElementById("s1").addEventListener("click", function(){
@@ -163,6 +169,8 @@ audio {
 
         }
       });
+
+      ///오디오 비쥬얼///
 
       window.onload = function() {
 
