--- a/core-interaction/site interface/map.html
+++ b/core-interaction/site interface/map.html
@@ -10,7 +10,7 @@
     <p>Welcome to Washington square park</p>
 
     <div id="map2">Map</div>
-  <div id="whereyouare"><a href="Location.html">Check Location</div>
+  <div id="whereyouare"><a href="location.html">Check Location</div>
   <div id="sound"><a href="music.html">Sound</div>
 
 
