--- a/core-interaction/site interface/location.html
+++ b/core-interaction/site interface/location.html
@@ -1,7 +1,25 @@
 <head>
+  <script language="javascript" type="text/javascript" src="http://lmccart.github.io/processing-js/lib/pjs.js"></script>
   <script language="javascript" type="text/javascript" src="location.js"></script>
 </head>
-
+  <div id="home" a href="map.html">Home</div>
+<style>
+  #home {
+    font-size: 40px;
+    bottom: 50px;
+    text-align: center;
+    padding-top: 24px;
+    left: 800px;
+    height: 100px;
+    width: 150px;
+    border-top: 5px;
+    border-bottom: 5px;
+    background-color: white;
+    border-radius: 50px;
+    display: inline-block;
+    position: fixed;
+  }
+</style>
 <body>
-
+  <div id="home"><a href="map.html">Home</div>
 </body>
